--- a/cfp/index.html
+++ b/cfp/index.html
@@ -333,6 +333,10 @@
                 title: 'Dancing with Uncertainty: Challenges of Distributed Systems',
                 abstract: 'You adopted microservices… and now networks fail, clocks drift, messages arrive out of order, and data goes out of sync, while you\'re just trying to survive. This talk walks through the fundamental challenges of distributed systems helping you make informed decisions.'
             },
+            {
+                title: 'The Quest for Optimal Microservice Size',
+                abstract: 'When do our services stop being services and become microservices? Are we sizing our microservices right? Do we have enough microservices?\n\nThose are common questions that I believe I can answer in 25 minutes.'
+            },
         ],
         pl: [
             {
