--- a/cfp/index.html
+++ b/cfp/index.html
@@ -337,6 +337,10 @@
                 title: 'The Quest for Optimal Microservice Size',
                 abstract: 'When do our services stop being services and become microservices? Are we sizing our microservices right? Do we have enough microservices?\n\nThose are common questions that I believe I can answer in 25 minutes.'
             },
+            {
+                title: 'Modern Asynchronous Programming in Java',
+                abstract: 'Asynchronous programming in Java has evolved far beyond ExecutorService and Future.\n\nYou\'ll learn how to design asynchronous workflows with CompletableFuture, when to use virtual threads to simplify concurrency, and how structured concurrency changes the way we model lifecycles and failure. We\'ll also dig into parallel processing, comparing parallel streams with newer approaches like gatherers, and discuss when each is appropriate.'
+            },
         ],
         pl: [
             {
